# gr-numexpr

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: numexprConfig.cmake
grc/: CMakeLists.txt  numexpr_evaluate.xml
python/: CMakeLists.txt  numexpr_evaluate.py  qa_numexpr_evaluate.py
